<resources>
    <string name="app_name">Simply</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // API URL
    <string name="url">http://dev.simply-cs.simply-cs.com/public/</string>
    <string name="login_url">http://biotechautomfg.com/</string>


    <string name="title_shop">Today</string>
    <string name="title_gifts">Previous day</string>
    <string name="title_cart">archive</string>

    <string name="tag_line">Learn Simply</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Learn Simply</string>
    <string name="slide_1_desc">An Easy, Joyful and Fruitful way of Simply Learning</string>

    <string name="slide_2_title">Modus Operandi</string>
    <string name="slide_2_desc">Read, Understand &amp; Mug it up - All at One Place</string>

    <string name="slide_3_title">Patience &amp; Practice</string>
    <string name="slide_3_desc">Follow the Schedule \n Complete the Schedule on Time \n Practice it Daily</string>

    <string name="slide_4_title">Learn &amp; Revise</string>
    <string name="slide_4_desc">12 hours and you are Ready to Revise</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="Semail">
<![CDATA[
    <html>
        <head></head>
        <bodystyle text-align:justify="">
            <body> Lorem ipsum dolor sit amet, consectetur  adipiscing elit.
                Nunc pellentesque, urna nec hendrerit pellentesque, risus massa
            </body>
        </bodystyle>
   </html>
]]>
</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>

    <!--  we need to use video ids instead of video link  -->
    <string-array name="video_id_array">
        <item>CqhpNxI8qYw</item>
        <item>sasCrpgHDy8</item>
        <item>iJeh3x09Ya8</item>
        <item>B5zRaD7B504</item>
        <item>9qWHzj8k-Uo</item>
        <item>RjiK45wC924</item>
        <item>RH3zaLO8H4E</item>
        <item>o14pyzosjvk</item>
        <item>5SQrpBQne7A</item>
        <item>5WJ3r67ORxo</item>
    </string-array>

    <string-array name="video_title_array">
        <item>Android Security Lock Demo</item>
        <item>Android Sectioned RecyclerView Demo</item>
        <item>Android Home Screen Widgets Demo</item>
        <item>Android Floating Widget like Facebook Messenger Chat Head Demo</item>
        <item>Android Google Maps Introduction Demo</item>
        <item>Android Lollipop Activity Transitions Demo</item>
        <item>Android Toolbar Animation Using Design Support Library Demo</item>
        <item>Android Material Advance Tabs Demo</item>
        <item>Android Drag and Drop Demo</item>
        <item>Android Fingerprint Authentication Demo</item>
    </string-array>

    <string-array name="video_duration_array">
        <item>02:48</item>
        <item>00:44</item>
        <item>01:01</item>
        <item>00:55</item>
        <item>01:03</item>
        <item>00:25</item>
        <item>00:34</item>
        <item>00:45</item>
        <item>00:52</item>
        <item>00:28</item>
    </string-array>

    <string name="question">How is the first president of Nigeria?</string>

    <string name="answer_one">King Ade</string>

    <string name="answer_two"> olu Obasanjo</string>

    <string name="answer_three">Jona Goodluck</string>

    <string name="answer_four"> Atiku Abubakar</string>

    <string name="next_questions"> Next Question</string>

    <string name="previous_questions"> Previous Question</string>

    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_full_screen">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_no_action_bar">NoActionBarActivity</string>

</resources>
