<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<LinearLayout-->
        <!--android:id="@+id/top"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_margin="8dp">-->

        <!--<TextView-->
            <!--android:id="@+id/submit"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="300dp"-->
            <!--android:text="Submit"-->
            <!--android:textColor="@color/colorPrimary"/>-->


    <!--</LinearLayout>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:id="@+id/quiz_question"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quiz_question"
                android:layout_alignLeft="@+id/quiz_question"
                android:layout_alignStart="@+id/quiz_question"
                android:layout_marginTop="40dp"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/radio0"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:text="@string/answer_one"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="20dp"
                    android:button="@drawable/radio_bg"/>

                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/radio1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/answer_two"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="20dp"
                    android:button="@drawable/radio_bg"/>

                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/radio2"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/answer_three"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="20dp"

                    android:button="@drawable/radio_bg"/>

                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/radio3"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/answer_four"
                    android:paddingLeft="20dp"
                    android:button="@drawable/radio_bg"/>

            </RadioGroup>

    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_margin="8dp">-->

        <!--<TextView-->
            <!--android:id="@+id/prevques"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:text="< Prev"-->
            <!--android:textColor="@color/colorPrimary"/>-->


        <!--<TextView-->
            <!--android:id="@+id/nextques"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="250dp"-->
            <!--android:text="Next >"-->
            <!--android:textColor="@color/colorPrimary"/>-->


    <!--</LinearLayout>-->

</RelativeLayout>